--- a/package.json
+++ b/package.json
@@ -6,28 +6,32 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "format": "prettier --config .prettierrc --write './**/*.{ts,tsx,js,jsx,css,scss,json,md}'"
     },
     "dependencies": {
-        "@headlessui/react": "^1.6.0",
+        "@headlessui/react": "^1.6.1",
         "axios": "^0.27.2",
         "classnames": "^2.3.1",
         "date-fns": "^2.28.0",
-        "firebase": "^9.6.11",
-        "firebase-admin": "^10.1.0",
+        "draft-js": "^0.11.7",
+        "draftjs-to-html": "^0.9.1",
         "next": "12.1.5",
-        "next-firebase-auth": "^0.14.3",
         "react": "18.0.0",
         "react-dom": "18.0.0",
+        "react-draft-wysiwyg": "^1.14.7",
         "react-hot-toast": "^2.2.0",
         "react-icons": "^4.3.1",
+        "react-image-crop": "^10.0.1",
         "react-query": "^3.38.1",
         "sanitize-html": "^2.7.0"
     },
     "devDependencies": {
+        "@types/draft-js": "^0.11.9",
+        "@types/draftjs-to-html": "^0.8.1",
         "@types/node": "17.0.26",
         "@types/react": "18.0.6",
         "@types/react-dom": "18.0.2",
+        "@types/react-draft-wysiwyg": "^1.13.4",
         "@types/sanitize-html": "^2.6.2",
         "autoprefixer": "^10.4.5",
         "postcss": "^8.4.12",
