--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "date-fns": "^2.28.0",
         "draft-js": "^0.11.7",
         "draftjs-to-html": "^0.9.1",
+        "html-to-draftjs": "1.4.0",
         "next": "12.1.5",
         "react": "18.0.0",
         "react-dom": "18.0.0",
@@ -28,6 +29,7 @@
     "devDependencies": {
         "@types/draft-js": "^0.11.9",
         "@types/draftjs-to-html": "^0.8.1",
+        "@types/html-to-draftjs": "1.4.0",
         "@types/node": "17.0.26",
         "@types/react": "18.0.6",
         "@types/react-dom": "18.0.2",
