--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "react-icons": "^4.3.1",
         "react-image-crop": "^10.0.1",
         "react-query": "^3.38.1",
-        "sanitize-html": "^2.7.0"
+        "sanitize-html": "^2.7.0",
+        "ua-parser-js": "^1.0.2"
     },
     "devDependencies": {
         "@types/draft-js": "^0.11.9",
@@ -35,6 +36,7 @@
         "@types/react-dom": "18.0.2",
         "@types/react-draft-wysiwyg": "^1.13.4",
         "@types/sanitize-html": "^2.6.2",
+        "@types/ua-parser-js": "^0.7.36",
         "autoprefixer": "^10.4.5",
         "postcss": "^8.4.12",
         "prettier": "^2.6.2",
